src/test/ui/moves/borrow-closures-instead-of-move.stderr
error[E0382]: use of moved value: `f`
  --> $DIR/borrow-closures-instead-of-move.rs:3:22
   |
LL | fn takes_fn(f: impl Fn()) {
   |             - move occurs because `f` has type `impl Fn()`, which does not implement the `Copy` trait
LL |     loop {
LL |         takes_fnonce(f);
   |                      ^ value moved here, in previous iteration of loop
   |
help: consider borrowing `f`
   |
LL |         takes_fnonce(&f);
   |                      +

error[E0382]: use of moved value: `m`
  --> $DIR/borrow-closures-instead-of-move.rs:14:18
   |
LL | fn takes_fn_mut(m: impl FnMut()) {
   |                 - move occurs because `m` has type `impl FnMut()`, which does not implement the `Copy` trait
LL |     if maybe() {
LL |         takes_fnonce(m);
   |                      - value moved here
...
LL |     takes_fnonce(m);
   |                  ^ value used here after move
   |
help: consider mutably borrowing `m`
   |
LL |         takes_fnonce(&mut m);
   |                      ++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0382`.
